# genai_evaluation

./: 1 - Metrics Examples.ipynb  2.7 - Custom Evaluators.ipynb  3.1 - Using prompty for synthetic conversations.ipynb  README.md  credentials_my(template).env  enriched_documents.csv  enriched_documents_index.json  enriched_documents_records.json  enriched_documents_split.json  enriched_documents_table.json  eval01 - dataset building.ipynb  eval01 - dataset management.ipynb  eval02 - dataset management.ipynb  main.py  pyproject.toml
.ipynb_checkpoints/: 0.1 dataset building-checkpoint.ipynb  3.1 - Using prompty for synthetic conversations-checkpoint.ipynb  eval01 - dataset building-checkpoint.ipynb  eval02 - dataset management-checkpoint.ipynb  genai01 - dataset management-checkpoint.ipynb  intent_resolution-checkpoint.ipynb  metrics-checkpoint.json
0 - dataset preparation/: 0.1 dataset building.ipynb  0.2 dataset management.ipynb  system_message.txt
1 - agent evaluators/: 02-AI_Judge_Evaluator_Tool_Call_Accuracy.ipynb  03-AI_Judge_Evaluator_Task_Adherence.ipynb  04-AI_Judge_Evaluators_Response_Completeness.ipynb  1.1 - intent_resolution.ipynb  1.2 - AI_Judge_Evaluator_Tool_Call_Accuracy.ipynb  1.3-AI_Judge_Evaluator_Task_Adherence.ipynb  1.4 - AI_Judge_Evaluators_Response_Completeness.ipynb  1.4-AI_Judge_Evaluators_Response_Completeness.ipynb
1 - metrics/: 1 - Metrics Examples.ipynb  system_message.txt
2 - evaluate locally/: 1 - groundedness.ipynb  2.1 - Using prompty for synthetic conversations.ipynb  2.1 - groundedness.ipynb  2.2 - violence and self-harm.ipynb  (+9 more)
(+120 files in other folders)
